# agent-policy-builder-mcp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: technical-design.md  topic-governance.md
examples/: README.md  admin_access_policy.md  ai_model_invocation_policy.md  payment_policy.md  payment_policy_output.yaml  payment_policy_tests.yaml  phi_access_policy.md  pii_export_policy.md
src/glasstape_policy_builder/: __init__.py  cerbos_cli.py  cerbos_generator.py  icp_validator.py  llm_adapter.py  redteam_analyzer.py  server.py  setup.py  templates.py  topic_taxonomy.py
src/glasstape_policy_builder/tools/: __init__.py  generate_policy.py  list_templates.py  shared_utils.py  suggest_improvements.py  test_policy.py  validate_policy.py
src/glasstape_policy_builder/types/: __init__.py  icp.py  results.py
tests/: test_components.py  test_tools.py  test_topic_features.py
